fixed: setup